--- a/banco_warehouse/models/sources.yml
+++ b/banco_warehouse/models/sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: banco_origen
     database: dataengineerp
-    schema: banco_raw  # <--- El dataset donde cargamos los CSVs
+    schema: banco_raw # dataset donde estan los csv cargados
     tables:
       - name: raw_clientes
       - name: raw_comercios
